k8s/song-service/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-api
  namespace: default
  labels:
    app.kubernetes.io/name: song-api
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: song-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: song-api
    spec:
      containers:
        - name: server
          image: meta/song-api:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          
          # Explicitly listing all variables in 'env' instead of 'envFrom'
          volumeMounts:
            - name: media-storage
              mountPath: /app/media

      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: song-media-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: song-api
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: song-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
