k8s/song-service/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-and-internal-apps
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: gin-song-app # Traffic target
  policyTypes:
    - Ingress
  ingress:
    # Rule 1: External Traffic via Nginx
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

    # Rule 2: Inter-service communicatoin allowed to streaming service
    - from:
        - podSelector:
            matchLabels:
              app: gin-streaming-app

    # Rule 3: Inter-service communicatoin allowed to user service
    - from:
        - podSelector:
            matchLabels:
              app: gin-user-app
    
    
    #* UNCOMMENT AND DUPLICATE FOR FURTHER POLICY ADDITION
    # Rule 4: Example - Analytics Engine (New)
    # Allows your data processing service to pull song data
    # - from:
    #     - podSelector:
    #         matchLabels:
    #           app: analytics-engine
